[gd_scene load_steps=47 format=3 uid="uid://cqji66hub7n4c"]

[ext_resource type="Script" uid="uid://dvwrwiqfcg2ox" path="res://tscn/base/main.gd" id="1_fbrpa"]
[ext_resource type="Script" uid="uid://dxl8r68qs3xb3" path="res://script/base/camera.gd" id="2_6n7qg"]
[ext_resource type="Script" uid="uid://cx5kq4hhbqjay" path="res://tscn/base/world_state.gd" id="2_c02yp"]
[ext_resource type="PackedScene" uid="uid://chy4yawip4uuv" path="res://tscn/level/level1.tscn" id="2_pu8ku"]
[ext_resource type="PackedScene" uid="uid://3o7vlg355hmm" path="res://tscn/nightmare/silent_echo.tscn" id="3_x0y7p"]
[ext_resource type="Script" uid="uid://bfdi8kw7bjj6s" path="res://resource/task/script/task_base.gd" id="4_wti3v"]
[ext_resource type="Script" uid="uid://wy2q78tsjs6v" path="res://resource/task/script/friend_arrive_at.gd" id="5_2r2gk"]
[ext_resource type="Texture2D" uid="uid://ct1muua1xwwx0" path="res://asset/tilemap/fog.png" id="5_62uu1"]
[ext_resource type="Script" uid="uid://dofex8so2fbjh" path="res://tscn/base/buff_manager.gd" id="5_e3ie2"]
[ext_resource type="Script" uid="uid://b1n4lsiyqejt6" path="res://tscn/base/gui.gd" id="5_x6sfj"]
[ext_resource type="Script" uid="uid://ndiiper5wrld" path="res://resource/task/script/hold_position.gd" id="6_3ywxj"]
[ext_resource type="Texture2D" uid="uid://c1beupvue0si5" path="res://asset/tilemap/direction_mark.png" id="6_ejuqd"]
[ext_resource type="Shader" uid="uid://cbg2vfogmutpu" path="res://resource/shader/fog.gdshader" id="7_2hctt"]
[ext_resource type="Script" uid="uid://c2hl3e318u5mq" path="res://tscn/base/hand_card.gd" id="7_7l181"]
[ext_resource type="PackedScene" uid="uid://ddv8i6m8rfiry" path="res://tscn/card/card.tscn" id="7_p213d"]
[ext_resource type="Texture2D" uid="uid://bdmh17baci0de" path="res://asset/tilemap/direction_mark_blue.png" id="7_t7hi1"]
[ext_resource type="PackedScene" uid="uid://vcgbmejjvpmq" path="res://tscn/UI/ui_message.tscn" id="9_0b2v0"]
[ext_resource type="Texture2D" uid="uid://do5aad7k1c5tp" path="res://asset/image/mark.png" id="9_dddtw"]
[ext_resource type="Script" uid="uid://bcocwxmsxblgc" path="res://tscn/base/sprite_fog.gd" id="9_pu8ku"]
[ext_resource type="Script" uid="uid://crbdmq1x6w3hd" path="res://tscn/base/mark_layer.gd" id="10_msrdk"]
[ext_resource type="Script" uid="uid://bamir4el056s0" path="res://tscn/base/library.gd" id="11_6dtny"]
[ext_resource type="Texture2D" uid="uid://tn0sudo03f68" path="res://asset/image/mark2.png" id="11_8vg1d"]
[ext_resource type="PackedScene" uid="uid://cask11bt4pjds" path="res://tscn/UI/sprite_mark.tscn" id="11_vfu7k"]
[ext_resource type="Script" uid="uid://dn1ah4v6cbicy" path="res://tscn/base/discard_pile.gd" id="11_x0y7p"]
[ext_resource type="Theme" uid="uid://cxebgykxavgyt" path="res://asset/UI/resource/default.theme" id="14_jp1ya"]
[ext_resource type="PackedScene" uid="uid://df6cgfm0puidl" path="res://tscn/UI/ui_animation_turn_change.tscn" id="25_2r2gk"]
[ext_resource type="PackedScene" uid="uid://ci8m4pj7ss1tl" path="res://tscn/UI/ui_event.tscn" id="26_3ywxj"]
[ext_resource type="PackedScene" uid="uid://dsqll21dq2x6u" path="res://tscn/title/final_panel.tscn" id="27_rxawt"]

[sub_resource type="Resource" id="Resource_haulp"]
script = ExtResource("5_2r2gk")
target_map_position_list = Array[Array]([[Vector2i(0, 13), Vector2i(1, 13)]])
task_context = "将侦察小队部署到目标位置。"
event_list = Array[String]([])
event = "l1_start"
metadata/_custom_type_script = "uid://wy2q78tsjs6v"

[sub_resource type="Resource" id="Resource_rxawt"]
script = ExtResource("5_2r2gk")
target_map_position_list = Array[Array]([[Vector2i(7, 8), Vector2i(8, 8)]])
task_context = "己方单位到达目标位置。"
event_list = Array[String]([])
event = ""
metadata/_custom_type_script = "uid://wy2q78tsjs6v"

[sub_resource type="Resource" id="Resource_y45ii"]
script = ExtResource("6_3ywxj")
hold_turn_count_max = 2
can_pause = false
is_enemy = false
target_tag = "HUMAN"
target_map_position_list = Array[Array]([[Vector2i(7, 8), Vector2i(8, 8)]])
task_context = "己方单位坚守目标位置2个回合"
event_list = Array[String]([])
event = "l1_origin"
metadata/_custom_type_script = "uid://ndiiper5wrld"

[sub_resource type="Resource" id="Resource_d1lya"]
script = ExtResource("5_2r2gk")
target_map_position_list = Array[Array]([[Vector2i(12, 8), Vector2i(13, 8)], [Vector2i(4, 2), Vector2i(3, 2)]])
task_context = "己方单位到达目标位置。"
event_list = Array[String]([])
event = ""
metadata/_custom_type_script = "uid://wy2q78tsjs6v"

[sub_resource type="Resource" id="Resource_2r2gk"]
script = ExtResource("6_3ywxj")
hold_turn_count_max = 1
can_pause = false
is_enemy = false
target_tag = "HUMAN"
target_map_position_list = Array[Array]([[Vector2i(12, 8), Vector2i(13, 8)], [Vector2i(4, 2), Vector2i(3, 2)]])
task_context = "己方单位坚守目标位置1个回合"
event_list = Array[String](["l1_station", "l1_library"])
event = ""
metadata/_custom_type_script = "uid://ndiiper5wrld"

[sub_resource type="Resource" id="Resource_3ywxj"]
script = ExtResource("5_2r2gk")
target_map_position_list = Array[Array]([[Vector2i(0, 13), Vector2i(1, 13)]])
task_context = "己方单位到达目标位置。"
event_list = Array[String]([])
event = ""
metadata/_custom_type_script = "uid://wy2q78tsjs6v"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_t7hi1"]
texture = ExtResource("6_ejuqd")
texture_region_size = Vector2i(32, 32)
0:0/animation_columns = 12
0:0/animation_separation = Vector2i(2, 0)
0:0/animation_speed = 16.0
0:0/animation_mode = 1
0:0/animation_frame_0/duration = 10.0
0:0/animation_frame_1/duration = 1.0
0:0/animation_frame_2/duration = 1.0
0:0/animation_frame_3/duration = 1.0
0:0/animation_frame_4/duration = 1.0
0:0/animation_frame_5/duration = 1.0
0:0/animation_frame_6/duration = 1.0
0:0/animation_frame_7/duration = 1.0
0:0/animation_frame_8/duration = 1.0
0:0/animation_frame_9/duration = 1.0
0:0/animation_frame_10/duration = 1.0
0:0/animation_frame_11/duration = 1.0
0:0/0 = 0
1:0/animation_columns = 12
1:0/animation_separation = Vector2i(2, 0)
1:0/animation_speed = 16.0
1:0/animation_mode = 1
1:0/animation_frame_0/duration = 10.0
1:0/animation_frame_1/duration = 1.0
1:0/animation_frame_2/duration = 1.0
1:0/animation_frame_3/duration = 1.0
1:0/animation_frame_4/duration = 1.0
1:0/animation_frame_5/duration = 1.0
1:0/animation_frame_6/duration = 1.0
1:0/animation_frame_7/duration = 1.0
1:0/animation_frame_8/duration = 1.0
1:0/animation_frame_9/duration = 1.0
1:0/animation_frame_10/duration = 1.0
1:0/animation_frame_11/duration = 1.0
1:0/0 = 0
2:0/animation_columns = 12
2:0/animation_separation = Vector2i(2, 0)
2:0/animation_speed = 16.0
2:0/animation_mode = 1
2:0/animation_frame_0/duration = 10.0
2:0/animation_frame_1/duration = 1.0
2:0/animation_frame_2/duration = 1.0
2:0/animation_frame_3/duration = 1.0
2:0/animation_frame_4/duration = 1.0
2:0/animation_frame_5/duration = 1.0
2:0/animation_frame_6/duration = 1.0
2:0/animation_frame_7/duration = 1.0
2:0/animation_frame_8/duration = 1.0
2:0/animation_frame_9/duration = 1.0
2:0/animation_frame_10/duration = 1.0
2:0/animation_frame_11/duration = 1.0
2:0/0 = 0
2:1/animation_columns = 12
2:1/animation_separation = Vector2i(2, 0)
2:1/animation_speed = 16.0
2:1/animation_mode = 1
2:1/animation_frame_0/duration = 10.0
2:1/animation_frame_1/duration = 1.0
2:1/animation_frame_2/duration = 1.0
2:1/animation_frame_3/duration = 1.0
2:1/animation_frame_4/duration = 1.0
2:1/animation_frame_5/duration = 1.0
2:1/animation_frame_6/duration = 1.0
2:1/animation_frame_7/duration = 1.0
2:1/animation_frame_8/duration = 1.0
2:1/animation_frame_9/duration = 1.0
2:1/animation_frame_10/duration = 1.0
2:1/animation_frame_11/duration = 1.0
2:1/0 = 0
2:2/animation_columns = 12
2:2/animation_separation = Vector2i(2, 0)
2:2/animation_speed = 16.0
2:2/animation_mode = 1
2:2/animation_frame_0/duration = 10.0
2:2/animation_frame_1/duration = 1.0
2:2/animation_frame_2/duration = 1.0
2:2/animation_frame_3/duration = 1.0
2:2/animation_frame_4/duration = 1.0
2:2/animation_frame_5/duration = 1.0
2:2/animation_frame_6/duration = 1.0
2:2/animation_frame_7/duration = 1.0
2:2/animation_frame_8/duration = 1.0
2:2/animation_frame_9/duration = 1.0
2:2/animation_frame_10/duration = 1.0
2:2/animation_frame_11/duration = 1.0
2:2/0 = 0
1:2/animation_columns = 12
1:2/animation_separation = Vector2i(2, 0)
1:2/animation_speed = 16.0
1:2/animation_mode = 1
1:2/animation_frame_0/duration = 10.0
1:2/animation_frame_1/duration = 1.0
1:2/animation_frame_2/duration = 1.0
1:2/animation_frame_3/duration = 1.0
1:2/animation_frame_4/duration = 1.0
1:2/animation_frame_5/duration = 1.0
1:2/animation_frame_6/duration = 1.0
1:2/animation_frame_7/duration = 1.0
1:2/animation_frame_8/duration = 1.0
1:2/animation_frame_9/duration = 1.0
1:2/animation_frame_10/duration = 1.0
1:2/animation_frame_11/duration = 1.0
1:2/0 = 0
0:2/animation_columns = 12
0:2/animation_separation = Vector2i(2, 0)
0:2/animation_speed = 16.0
0:2/animation_mode = 1
0:2/animation_frame_0/duration = 10.0
0:2/animation_frame_1/duration = 1.0
0:2/animation_frame_2/duration = 1.0
0:2/animation_frame_3/duration = 1.0
0:2/animation_frame_4/duration = 1.0
0:2/animation_frame_5/duration = 1.0
0:2/animation_frame_6/duration = 1.0
0:2/animation_frame_7/duration = 1.0
0:2/animation_frame_8/duration = 1.0
0:2/animation_frame_9/duration = 1.0
0:2/animation_frame_10/duration = 1.0
0:2/animation_frame_11/duration = 1.0
0:2/0 = 0
0:1/animation_columns = 12
0:1/animation_separation = Vector2i(2, 0)
0:1/animation_speed = 16.0
0:1/animation_mode = 1
0:1/animation_frame_0/duration = 10.0
0:1/animation_frame_1/duration = 1.0
0:1/animation_frame_2/duration = 1.0
0:1/animation_frame_3/duration = 1.0
0:1/animation_frame_4/duration = 1.0
0:1/animation_frame_5/duration = 1.0
0:1/animation_frame_6/duration = 1.0
0:1/animation_frame_7/duration = 1.0
0:1/animation_frame_8/duration = 1.0
0:1/animation_frame_9/duration = 1.0
0:1/animation_frame_10/duration = 1.0
0:1/animation_frame_11/duration = 1.0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wa4ao"]
texture = ExtResource("7_t7hi1")
texture_region_size = Vector2i(32, 32)
0:0/animation_columns = 12
0:0/animation_separation = Vector2i(2, 0)
0:0/animation_speed = 16.0
0:0/animation_mode = 1
0:0/animation_frame_0/duration = 10.0
0:0/animation_frame_1/duration = 1.0
0:0/animation_frame_2/duration = 1.0
0:0/animation_frame_3/duration = 1.0
0:0/animation_frame_4/duration = 1.0
0:0/animation_frame_5/duration = 1.0
0:0/animation_frame_6/duration = 1.0
0:0/animation_frame_7/duration = 1.0
0:0/animation_frame_8/duration = 1.0
0:0/animation_frame_9/duration = 1.0
0:0/animation_frame_10/duration = 1.0
0:0/animation_frame_11/duration = 1.0
0:0/0 = 0
1:0/animation_columns = 12
1:0/animation_separation = Vector2i(2, 0)
1:0/animation_speed = 16.0
1:0/animation_mode = 1
1:0/animation_frame_0/duration = 10.0
1:0/animation_frame_1/duration = 1.0
1:0/animation_frame_2/duration = 1.0
1:0/animation_frame_3/duration = 1.0
1:0/animation_frame_4/duration = 1.0
1:0/animation_frame_5/duration = 1.0
1:0/animation_frame_6/duration = 1.0
1:0/animation_frame_7/duration = 1.0
1:0/animation_frame_8/duration = 1.0
1:0/animation_frame_9/duration = 1.0
1:0/animation_frame_10/duration = 1.0
1:0/animation_frame_11/duration = 1.0
1:0/0 = 0
2:0/animation_columns = 12
2:0/animation_separation = Vector2i(2, 0)
2:0/animation_speed = 16.0
2:0/animation_mode = 1
2:0/animation_frame_0/duration = 10.0
2:0/animation_frame_1/duration = 1.0
2:0/animation_frame_2/duration = 1.0
2:0/animation_frame_3/duration = 1.0
2:0/animation_frame_4/duration = 1.0
2:0/animation_frame_5/duration = 1.0
2:0/animation_frame_6/duration = 1.0
2:0/animation_frame_7/duration = 1.0
2:0/animation_frame_8/duration = 1.0
2:0/animation_frame_9/duration = 1.0
2:0/animation_frame_10/duration = 1.0
2:0/animation_frame_11/duration = 1.0
2:0/0 = 0
0:1/animation_columns = 12
0:1/animation_separation = Vector2i(2, 0)
0:1/animation_speed = 16.0
0:1/animation_mode = 1
0:1/animation_frame_0/duration = 10.0
0:1/animation_frame_1/duration = 1.0
0:1/animation_frame_2/duration = 1.0
0:1/animation_frame_3/duration = 1.0
0:1/animation_frame_4/duration = 1.0
0:1/animation_frame_5/duration = 1.0
0:1/animation_frame_6/duration = 1.0
0:1/animation_frame_7/duration = 1.0
0:1/animation_frame_8/duration = 1.0
0:1/animation_frame_9/duration = 1.0
0:1/animation_frame_10/duration = 1.0
0:1/animation_frame_11/duration = 1.0
0:1/0 = 0
1:1/0 = 0
2:1/animation_columns = 12
2:1/animation_separation = Vector2i(2, 0)
2:1/animation_speed = 16.0
2:1/animation_mode = 1
2:1/animation_frame_0/duration = 10.0
2:1/animation_frame_1/duration = 1.0
2:1/animation_frame_2/duration = 1.0
2:1/animation_frame_3/duration = 1.0
2:1/animation_frame_4/duration = 1.0
2:1/animation_frame_5/duration = 1.0
2:1/animation_frame_6/duration = 1.0
2:1/animation_frame_7/duration = 1.0
2:1/animation_frame_8/duration = 1.0
2:1/animation_frame_9/duration = 1.0
2:1/animation_frame_10/duration = 1.0
2:1/animation_frame_11/duration = 1.0
2:1/0 = 0
0:2/animation_columns = 12
0:2/animation_separation = Vector2i(2, 0)
0:2/animation_speed = 16.0
0:2/animation_mode = 1
0:2/animation_frame_0/duration = 10.0
0:2/animation_frame_1/duration = 1.0
0:2/animation_frame_2/duration = 1.0
0:2/animation_frame_3/duration = 1.0
0:2/animation_frame_4/duration = 1.0
0:2/animation_frame_5/duration = 1.0
0:2/animation_frame_6/duration = 1.0
0:2/animation_frame_7/duration = 1.0
0:2/animation_frame_8/duration = 1.0
0:2/animation_frame_9/duration = 1.0
0:2/animation_frame_10/duration = 1.0
0:2/animation_frame_11/duration = 1.0
0:2/0 = 0
1:2/animation_columns = 12
1:2/animation_separation = Vector2i(2, 0)
1:2/animation_speed = 16.0
1:2/animation_mode = 1
1:2/animation_frame_0/duration = 10.0
1:2/animation_frame_1/duration = 1.0
1:2/animation_frame_2/duration = 1.0
1:2/animation_frame_3/duration = 1.0
1:2/animation_frame_4/duration = 1.0
1:2/animation_frame_5/duration = 1.0
1:2/animation_frame_6/duration = 1.0
1:2/animation_frame_7/duration = 1.0
1:2/animation_frame_8/duration = 1.0
1:2/animation_frame_9/duration = 1.0
1:2/animation_frame_10/duration = 1.0
1:2/animation_frame_11/duration = 1.0
1:2/0 = 0
2:2/animation_columns = 12
2:2/animation_separation = Vector2i(2, 0)
2:2/animation_speed = 16.0
2:2/animation_mode = 1
2:2/animation_frame_0/duration = 10.0
2:2/animation_frame_1/duration = 1.0
2:2/animation_frame_2/duration = 1.0
2:2/animation_frame_3/duration = 1.0
2:2/animation_frame_4/duration = 1.0
2:2/animation_frame_5/duration = 1.0
2:2/animation_frame_6/duration = 1.0
2:2/animation_frame_7/duration = 1.0
2:2/animation_frame_8/duration = 1.0
2:2/animation_frame_9/duration = 1.0
2:2/animation_frame_10/duration = 1.0
2:2/animation_frame_11/duration = 1.0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_wa4ao"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_t7hi1")
sources/1 = SubResource("TileSetAtlasSource_wa4ao")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p213d"]
texture = ExtResource("5_62uu1")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_7l181"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_p213d")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pu8ku"]
shader = ExtResource("7_2hctt")
shader_parameter/color = Vector3(0.06, 0.15, 0.26)
shader_parameter/OCTAVES = 4

[sub_resource type="Gradient" id="Gradient_pu8ku"]
interpolation_mode = 1

[sub_resource type="GradientTexture2D" id="GradientTexture2D_msrdk"]
gradient = SubResource("Gradient_pu8ku")
width = 32
height = 32
repeat = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e3ie2"]
size = Vector2(764, 206)

[sub_resource type="Gradient" id="Gradient_t7hi1"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.75, 1)
colors = PackedColorArray(0.336608, 0.336608, 0.336608, 1, 0.325441, 0.325441, 0.325441, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wa4ao"]
gradient = SubResource("Gradient_t7hi1")
width = 512
height = 40
fill_from = Vector2(0.5, 0)
repeat = 2

[sub_resource type="GDScript" id="GDScript_t7hi1"]
script/source = "extends TextureRect

@onready var label_operation_tip: Label = $LabelOperationTip

var tween : Tween

func _ready() -> void:
	ActionSp.show_operation_tip = show_operation_tip
	ActionSp.hide_operation_tip = hide_operation_tip

func show_operation_tip(text : String) -> void:
	visible = true
	if is_instance_valid(tween):
		tween.kill()
	label_operation_tip.text = text
	tween = create_tween().set_loops()
	tween.tween_property(self, \"modulate\", Color(modulate, 0), 1)
	tween.tween_property(self, \"modulate\", Color(modulate, 1), 1)

func hide_operation_tip() -> void:
	visible = false
	tween.kill()
"

[node name="Main" type="Node2D"]
script = ExtResource("1_fbrpa")
level_pack = ExtResource("2_pu8ku")
nightmare_pack = ExtResource("3_x0y7p")
task_list = Array[ExtResource("4_wti3v")]([SubResource("Resource_haulp"), SubResource("Resource_rxawt"), SubResource("Resource_y45ii"), SubResource("Resource_d1lya"), SubResource("Resource_2r2gk"), SubResource("Resource_3ywxj")])

[node name="FirstNode" type="Node2D" parent="."]

[node name="WorldState" type="Node2D" parent="."]
script = ExtResource("2_c02yp")

[node name="BuffManager" type="Node2D" parent="WorldState"]
script = ExtResource("5_e3ie2")

[node name="BuildingLayer" type="Node2D" parent="WorldState"]

[node name="PathLayer" type="TileMapLayer" parent="WorldState"]
tile_set = SubResource("TileSet_wa4ao")

[node name="ProductLayer" type="Node2D" parent="WorldState"]

[node name="EventLayer" type="Node2D" parent="WorldState"]

[node name="Camera" type="Camera2D" parent="."]
script = ExtResource("2_6n7qg")

[node name="Fog" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_7l181")

[node name="SpriteFog" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_pu8ku")
centered = false
script = ExtResource("9_pu8ku")
light_texture = SubResource("GradientTexture2D_msrdk")

[node name="MarkLayer" type="Node2D" parent="."]
z_index = 1
script = ExtResource("10_msrdk")
mark_pack = ExtResource("11_vfu7k")

[node name="GUI" type="CanvasLayer" parent="."]
script = ExtResource("5_x6sfj")
ui_message_pack = ExtResource("9_0b2v0")

[node name="HandCard" type="Area2D" parent="GUI"]
position = Vector2(477, 413)
script = ExtResource("7_7l181")

[node name="ButtonDraw" type="Button" parent="GUI/HandCard"]
visible = false
offset_left = 249.0
offset_top = -176.0
offset_right = 385.0
offset_bottom = -145.0
theme = ExtResource("14_jp1ya")
text = "抽牌（作弊按钮）"

[node name="Library" type="Node2D" parent="GUI/HandCard"]
position = Vector2(287, 153)
script = ExtResource("11_6dtny")
card_pack = ExtResource("7_p213d")

[node name="Mark" type="Sprite2D" parent="GUI/HandCard"]
visible = false
modulate = Color(0.0177324, 0.0177324, 0.0177324, 1)
texture = ExtResource("9_dddtw")

[node name="DiscardPile" type="Node2D" parent="GUI/HandCard"]
position = Vector2(286, -161)
script = ExtResource("11_x0y7p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GUI/HandCard"]
shape = SubResource("RectangleShape2D_e3ie2")

[node name="Panel" type="Panel" parent="GUI/HandCard"]
offset_left = -382.0
offset_top = -103.0
offset_right = 383.0
offset_bottom = 103.0
mouse_filter = 2

[node name="LabelLibrary" type="Label" parent="GUI/HandCard"]
offset_left = 392.0
offset_top = -113.0
offset_right = 478.0
offset_bottom = -90.0
theme = ExtResource("14_jp1ya")
text = "抽牌堆："
autowrap_mode = 1

[node name="LabelDiscardPile" type="Label" parent="GUI/HandCard"]
offset_left = 392.0
offset_top = -84.0
offset_right = 478.0
offset_bottom = -61.0
theme = ExtResource("14_jp1ya")
text = "弃牌堆："
autowrap_mode = 1

[node name="ButtonTurnOver" type="Button" parent="GUI"]
offset_left = 870.0
offset_top = 237.0
offset_right = 942.0
offset_bottom = 268.0
theme = ExtResource("14_jp1ya")
text = "回合结束"

[node name="LabelCost" type="Label" parent="GUI"]
offset_left = 848.0
offset_top = 278.0
offset_right = 944.0
offset_bottom = 310.0
theme = ExtResource("14_jp1ya")
text = "费用：2/2"
horizontal_alignment = 1

[node name="Label" type="Label" parent="GUI"]
offset_left = 2.0
offset_top = 2.0
offset_right = 42.0
offset_bottom = 25.0

[node name="LabelMousePosition" type="Label" parent="GUI"]
offset_left = 853.0
offset_top = 201.0
offset_right = 957.0
offset_bottom = 224.0
theme = ExtResource("14_jp1ya")
vertical_alignment = 1

[node name="LabelMission" type="Label" parent="GUI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -192.0
offset_right = 200.0
offset_bottom = 48.0
grow_horizontal = 2
theme = ExtResource("14_jp1ya")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelPraseDegree" type="Label" parent="GUI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 48.0
offset_right = 104.0
offset_bottom = 96.0
grow_horizontal = 2
theme = ExtResource("14_jp1ya")
vertical_alignment = 1

[node name="LabelWakeDegree" type="Label" parent="GUI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 115.0
offset_top = 89.0
offset_right = 480.0
offset_bottom = 161.0
grow_horizontal = 2
theme = ExtResource("14_jp1ya")

[node name="LabelNightmareStrengh" type="Label" parent="GUI"]
offset_left = 2.0
offset_top = 30.0
offset_right = 42.0
offset_bottom = 53.0

[node name="UIBoxMessage" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 0
offset_top = 80.0
offset_right = 128.0
offset_bottom = 120.0

[node name="UIOperationTip" type="TextureRect" parent="GUI"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -256.0
offset_top = 95.0
offset_right = 256.0
offset_bottom = 135.0
grow_horizontal = 2
texture = SubResource("GradientTexture2D_wa4ao")
script = SubResource("GDScript_t7hi1")

[node name="LabelOperationTip" type="Label" parent="GUI/UIOperationTip"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("14_jp1ya")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="UIAnimationTurnChange" parent="GUI" instance=ExtResource("25_2r2gk")]

[node name="UIEvent" parent="GUI" instance=ExtResource("26_3ywxj")]
process_mode = 3

[node name="FinalPanel" parent="GUI" instance=ExtResource("27_rxawt")]
visible = false

[node name="Mark2" type="Sprite2D" parent="."]
visible = false
scale = Vector2(2, 2)
texture = ExtResource("11_8vg1d")

[node name="Label" type="Label" parent="."]
offset_left = 13.0
offset_top = 377.0
offset_right = 53.0
offset_bottom = 400.0
theme = ExtResource("14_jp1ya")
text = "指挥部"
